--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ src/interpreter/test.bin
 src/assembler/asm
 src/assembler/test.bbx
 src/assembler/test.bcx
+src/assembler/blackbox-assembler
+src/assembler/app.bcx
